--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,16 @@ pyflakes==2.4.0
 pytz==2021.3
 sqlparse==0.4.2
 testfixtures==6.18.3
+asgiref==3.4.1
+Django==3.2.9
+flake8==4.0.1
+flake8-isort==4.1.1
+isort==5.10.0
+mccabe==0.6.1
+Pillow==8.4.0
+pkg_resources==0.0.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
+pytz==2021.3
+sqlparse==0.4.2
+testfixtures==6.18.3
