--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,6 +1,33 @@
 version: '3.3'
 services:
 
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+#    environment:
+#      POSTGRES_PASSWORD: password
+    # файл, где хранятся переменные окружения
+    env_file:
+      - ./.env
+
+  web:
+    build:
+      context: ../backend/foodgram
+      dockerfile: Dockerfile
+#    image: zealousblack/...
+    restart: always
+# попробовать разные варианты размещения папки со статикой
+    volumes:
+      - static_value:/code/static/
+      - media_value:/code/media/
+#    ports:
+#      - "8000:8000"
+    depends_on:
+      - db
+    env_file:
+      - ./.env
+
   frontend:
     build:
       context: ../frontend
@@ -13,6 +40,35 @@ services:
       - 80:80
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
       - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
+    depends_on:
+      - web
+
+volumes:
+  postgres_data:
+  static_value:
+  media_value:
+
+
+# version: '3.3'
+# services:
+
+#   frontend:
+#     build:
+#       context: ../frontend
+#       dockerfile: Dockerfile
+#     volumes:
+#       - ../frontend/:/app/result_build/
+#   nginx:
+#     image: nginx:1.19.3
+#     ports:
+#       - 80:80
+#     volumes:
+#       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+#       - ../frontend/build:/usr/share/nginx/html/
+#       - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
+#       - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
