--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,8 +1,16 @@
 server {
     listen 80;
+    # server_name <server_name>;
+    server_name 127.0.0.1;
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
+    }
+    location /static/ {
+        root /var/html/;
+    }
+    location /media/ {
+        root /var/html/;
     }
     location / {
         root /usr/share/nginx/html;
@@ -12,6 +20,7 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
+        # proxy_pass http://web:8000;
       }
       error_page   500 502 503 504  /50x.html;
       location = /50x.html {
