Переместил папку data, изменил load_ingredients.py

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -6,6 +6,15 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+    location /api/ {  # закрыть
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://web:8000;
+    }
+    location /admin/ {
+        proxy_pass http://web:8000/admin/;
+    }
     location /static/ {
         root /var/html/;
     }
