Переименовал папку static в static_foodgram

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -15,11 +15,13 @@ server {
     location /admin/ {
         proxy_pass http://web:8000/admin/;
     }
-    location /static/ {
+    location /static_foodgram/ {
         root /var/html/;
+        try_files $uri $uri/ =404;
     }
     location /media/ {
         root /var/html/;
+        try_files $uri $uri/ =404;
     }
     location / {
         root /usr/share/nginx/html;
@@ -29,7 +31,6 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-        # proxy_pass http://web:8000;
       }
       error_page   500 502 503 504  /50x.html;
       location = /50x.html {
