--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: postgres:13.0-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+    # ports:
+    #   - "5432:5432"
 #    environment:
 #      POSTGRES_PASSWORD: password
     # файл, где хранятся переменные окружения
@@ -19,7 +21,7 @@ services:
     restart: always
 # попробовать разные варианты размещения папки со статикой
     volumes:
-      - static_value:/code/static/
+      - static_value:/code/static_foodgram/
       - media_value:/code/media/
 #    ports:
 #      - "8000:8000"
@@ -40,7 +42,7 @@ services:
       - 80:80
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - static_value:/var/html/static/
+      - static_value:/var/html/static_foodgram/
       - media_value:/var/html/media/
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
