--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,11 @@ djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 flake8==4.0.1
+flake8-broken-line==0.4.0
 flake8-isort==4.1.1
+flake8-plugin-utils==1.3.2
+flake8-polyfill==1.0.2
+flake8-return==1.1.3
 gunicorn==20.1.0
 idna==3.3
 isort==5.10.0
@@ -22,6 +26,7 @@ Jinja2==3.0.3
 MarkupSafe==2.0.1
 mccabe==0.6.1
 oauthlib==3.1.1
+pep8-naming==0.12.1
 Pillow==8.4.0
 # pkg_resources==0.0.0
 psycopg2-binary==2.9.2
