--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -6,7 +6,7 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
-    location /api/ {  # закрыть
+    location /api/ {
         proxy_set_header        Host $host;
         proxy_set_header        X-Forwarded-Host $host;
         proxy_set_header        X-Forwarded-Server $host;
@@ -17,11 +17,9 @@ server {
     }
     location /static_foodgram/ {
         root /var/html/;
-        # try_files $uri $uri/ =404;
     }
     location /media/ {
         root /var/html/;
-        # try_files $uri $uri/ =404;
     }
     location / {
         root /usr/share/nginx/html;
