--- a/setup.cfg
+++ b/setup.cfg
@@ -9,3 +9,9 @@ exclude =
 per-file-ignores =
     */settings.py:E501
 max-complexity = 10
+
+[isort]
+default_section = THIRDPARTY
+known_first_party = foodgram-project-react
+known_django = django,rest_framework,django_filters
+sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
