--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
+          file: backend/foodgram/Dockerfile
           push: true
           tags: zealousblack/foodgram:latest
 
