--- a/backend/foodgram/Dockerfile
+++ b/backend/foodgram/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.8-slim
 WORKDIR /code
 
-COPY ./requirements.txt .
+COPY backend/foodgram/requirements.txt .
 
 RUN pip3 install --upgrade pip
 RUN pip3 install -r requirements.txt
