--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -43,12 +43,18 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to Docker Hub
+      - name: Push backend to Docker Hub
         uses: docker/build-push-action@v2
         with:
           file: backend/foodgram/Dockerfile
           push: true
           tags: zealousblack/foodgram:latest
+      - name: Push frontend to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          file: frontend/Dockerfile
+          push: true
+          tags: zealousblack/foodgram_frontend:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -64,8 +70,10 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             sudo docker pull zealousblack/foodgram
+            sudo docker pull zealousblack/foodgram_frontend
             sudo docker-compose stop
             sudo docker-compose rm web
+            sudo docker-compose rm frontend
             # Создаст файл для переменных окружения
             touch .env 
             # Наполнит файл переменными окружения из секретов GitHub
