--- a/backend/foodgram/Dockerfile
+++ b/backend/foodgram/Dockerfile
@@ -1,11 +1,11 @@
 FROM python:3.8-slim
 WORKDIR /code
 
-COPY backend/foodgram/requirements.txt .
+COPY ./backend/foodgram/requirements.txt .
 
 RUN pip3 install --upgrade pip
 RUN pip3 install -r requirements.txt
 
-COPY . .
+COPY ./backend/foodgram/ .
 
-CMD gunicorn foodgram/foodgram.wsgi:application --bind 0.0.0.0:8000
+CMD gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000
