Подготовил проект к ревью

--- a/.gitignore
+++ b/.gitignore
@@ -133,8 +133,8 @@ dmypy.json
 
 .vscode/
 
-backend/foodgram/media/recipes/
-backend/foodgram/media/shopping_carts/
+backend/foodgram/media/
 
 api_requests.http
 h
+h*
