--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name 62.84.120.69;
     server_tokens off;
     location /api/docs/ {
-        root /usr/share/nginx/html;
+        root /usr/share/nginx/html/;
         try_files $uri $uri/redoc.html;
     }
     location /api/ {
