--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,15 +2,15 @@ server {
     listen 80;
     server_name 62.84.120.69;
     server_tokens off;
-    location /api/docs/ {
-        root /usr/share/nginx/html/;
-        try_files $uri $uri/redoc.html;
-    }
     location /api/ {
         proxy_set_header        Host $host;
         proxy_set_header        X-Forwarded-Host $host;
         proxy_set_header        X-Forwarded-Server $host;
         proxy_pass http://web:8000;
+    }
+    location /api/docs/ {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/redoc.html;
     }
     location /admin/ {
         proxy_pass http://web:8000/admin/;
