--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -31,9 +31,8 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - static_value:/var/html/static_foodgram/
       - media_value:/var/html/media/
-      - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
-      - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
+      - ./foodgram/frontend/build:/usr/share/nginx/html/
+      - ./foodgram/docs:/usr/share/nginx/html/api/docs/
     depends_on:
       - web
 
