--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -77,7 +77,7 @@ jobs:
             sudo docker-compose rm frontend
             # Создаст файл для переменных окружения
             sudo rm .env
-            touch .env 
+            sudo touch .env 
             # Наполнит файл переменными окружения из секретов GitHub
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
