--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -69,7 +69,6 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            cd foodgram/
             sudo docker pull zealousblack/foodgram
             sudo docker pull zealousblack/foodgram_frontend
             sudo docker-compose stop
@@ -79,7 +78,7 @@ jobs:
             sudo rm .env
             sudo touch .env 
             # Наполнит файл переменными окружения из секретов GitHub
-            echo SECRET_KEY=${{ secrets.SECRET_KEY }}
+            echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
